# solubility_param_flow

./: .gitignore  README.md  pyproject.toml
docs/: external_models.md
scripts/: setup_uni_elf_env.sh
src/solubility_param_flow/: __init__.py  cli.py
src/solubility_param_flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/solubility_param_flow/core/: hsp_calculator.py  hsp_cosmo.py  solubility_predictor.py
src/solubility_param_flow/data/: __init__.py  csv_loader.py
src/solubility_param_flow/descriptors/: molecular_descriptor.py
src/solubility_param_flow/models/: __init__.py  feature_builder.py  hsp_trainer.py  solubility_predictor.py
src/solubility_param_flow/pipelines/: __init__.py  smiles_pipeline.py
src/solubility_param_flow/quantum/: __init__.py  dry_run.py  factory.py
src/solubility_param_flow/schemas/: __init__.py  execution.py  workflow_models.py
src/solubility_param_flow/utils/: __init__.py
src/solubility_param_flow/workflow/: __init__.py  hsp_workflow.py  smiles_to_orca.py
tests/: test_external_runners.py  test_feature_builder.py  test_hsp_calculator.py  test_smiles_pipeline.py
